--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -266,11 +266,11 @@ h6 {
   text-transform: uppercase;
 }
 
-.card-title span {
+/* .card-title span {
   color: #899bbd;
   font-size: 14px;
   font-weight: 400;
-}
+} */
 
 .card-body {
   padding: 0 20px 20px 20px;
