update of messaje in login overflow img

--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -20,10 +20,12 @@ body {
 .login-card-img {
     border-radius: 0;
     position: absolute;
-    width: 100%;
+    width: 33rem;
+    padding: 3rem;
     height: 100%;
     -o-object-fit: cover;
     object-fit: cover;
+    background-color: #a18347;
 }
 .login-card .card-body {
     padding: 85px 60px 60px;
