--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -2,6 +2,7 @@ body {
     font-family: "Karla", sans-serif;
     background-color: #f6f4ef;
     min-height: 100vh;
+    overflow-y: hidden;
 }
 
 .brand-wrapper {
@@ -11,29 +12,8 @@ body {
     height: 6rem;
 }
 
-.login-card {
-    border: 0;
-    border-radius: 27.5px;
-    box-shadow: 0 10px 30px 0 rgba(172, 168, 168, 0.43);
-    overflow: hidden;
-}
-.login-card-img {
-    border-radius: 0;
-    position: absolute;
-    width: 33rem;
-    padding: 3rem;
-    height: 100%;
-    -o-object-fit: cover;
-    object-fit: cover;
-    background-color: #a18347;
-}
 .login-card .card-body {
     padding: 85px 60px 60px;
-}
-@media (max-width: 422px) {
-    .login-card .card-body {
-        padding: 35px 24px;
-    }
 }
 .login-card-description {
     font-size: 25px;
@@ -93,19 +73,176 @@ body {
     color: #0d2366;
     margin-bottom: 60px;
 }
-@media (max-width: 767px) {
-    .login-card-footer-text {
-        margin-bottom: 24px;
-    }
-}
 .login-card-footer-nav a {
     font-size: 14px;
     color: #919aa3;
 }
 
-.btnListaVacaciones{
+.banderas{
     text-align: end;
-    padding-top: 1em;
+}
+
+/* Design for mobile */
+/* [class*="col-"] {
+    width: 100%;
+} */
+
+@media (max-width: 480px) {
+    .body{
+        overflow-y: visible !important;
+    }
+    .logo{
+        display: block;
+    }
+    .inicioSession{
+        display: none;
+    }
+    .login-card {
+        border: 0 !important;
+        border-radius: 27.5px !important;
+        box-shadow: 0 10px 30px 0 rgba(172, 168, 168, 0.43) !important;
+        /* overflow: hidden !important; */
+        margin-top: 18vh !important;
+    }
+    .login-card-img {
+        display: none;
+    }
+    .login-card .card-body {
+        padding: 1vh 6vh;
+    }
+    
+}
+/* ---resolucion de samsung flold */
+@media (width: 280px) and (height: 653px) {
+    .brand-wrapper .logo {
+        height: 4rem !important;
+    }
+}
+
+@media (min-width: 481px) and (max-width: 768px) {
+    .logo{
+        display: block !important;
+        width: 32vh !important;
+        margin: 0 1vh !important;
+    }
+    .inicioSession{
+        display: none;
+        font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-size: 2rem;
+        text-align: center;
+        font-weight: 700;
+    }
+    .login-card {
+        border: 0 !important;
+        border-radius: 27.5px !important;
+        box-shadow: 0 10px 30px 0 rgba(172, 168, 168, 0.43) !important;
+        overflow: hidden !important;
+        margin-top: 18vh !important;
+    }
+    .login-card-img {
+        display: none;
+        border-radius: 0;
+        position: absolute;
+        width: 100%;
+        padding: 3rem;
+        height: 100%;
+        object-fit: contain;
+        background-color: #a18347;
+    }
+    .login-card-footer-text {
+        margin-bottom: 24px;
+    }
+}
+@media (width: 768px) and (height: 1024px){
+    .login-card-img {
+        display: block;
+        border-radius: 0;
+        position: absolute;
+        width: 100%;
+        padding: 3rem;
+        height: 100%;
+        object-fit: contain;
+        background-color: #a18347;
+    }
+    .logo{
+        display: none;
+    }
+}  /* air pad mini desing */
+
+@media (min-width: 769px) and (max-width: 1279px) {
+    .logo{
+        display: none !important;
+        width: 32vh !important;
+        margin: 0 9vh !important;
+    }
+    .inicioSession{
+        display: block;
+        font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-size: 2rem;
+        text-align: center;
+        font-weight: 700;
+    }
+    .login-card {
+        border: 0 !important;
+        border-radius: 27.5px !important;
+        box-shadow: 0 10px 30px 0 rgba(172, 168, 168, 0.43) !important;
+        overflow: hidden !important;
+        margin-top: 18vh !important;
+    }
+    .login-card-img {
+        border-radius: 0;
+        position: absolute;
+        width: 100%;
+        padding: 3rem;
+        height: 100%;
+        object-fit: contain;
+        background-color: #a18347;
+    }
+    .login-card-footer-text {
+        margin-bottom: 24px;
+    }
+}
+@media screen and (width:1024px) and (height:600px) {
+    body {
+        font-family: "Karla", sans-serif;
+        background-color: #f6f4ef;
+        min-height: 100vh;
+        overflow-y: visible !important;
+    }
+} /* nest hub desing */
+
+@media (min-width: 1280px) {
+    .logo{
+        display: none !important;
+        width: 32vh !important;
+        margin: 0 9vh !important;
+    }
+    .inicioSession{
+        display: block;
+        font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-size: 2rem;
+        text-align: center;
+        font-weight: 700;
+    }
+    .login-card {
+        border: 0 !important;
+        border-radius: 27.5px !important;
+        box-shadow: 0 10px 30px 0 rgba(172, 168, 168, 0.43) !important;
+        overflow: hidden !important;
+        margin-top: 18vh !important;
+    }
+    .login-card-img {
+        border-radius: 0;
+        position: absolute;
+        width: 100%;
+        padding: 3rem;
+        height: 100%;
+        object-fit: contain;
+        background-color: #a18347;
+    }
+    .login-card-footer-text {
+        margin-bottom: 24px;
+    }
 }
 
 /*# sourceMappingURL=login.css.map */
