--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1461,6 +1461,12 @@ Estilos Home
 }
 
 
+.btnListaVacaciones{
+  text-align: end;
+  padding-top: 1em;
+}
+
+
 /*-------------------------------------------------------------
 Estilos Datos personales
 --------------------------------------------------------------*/
