flag cargo sin acceso

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1403,7 +1403,7 @@ Verificación contraseña
   /*content: "✖";*/
 }
 
-#message2, #message3{
+#message2, #message3, #message4{
   display:none;
 }
 
