--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Karla", sans-serif;
+    font-family:  sans-serif;
     background-color: #f6f4ef;
     min-height: 100vh;
     overflow-y: hidden;
