--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1570,7 +1570,7 @@ Estilos Vacaciones
   text-align: center;
 }
 .table th {
-  text-align: center;
+  text-align: center !important;
 }
 /* .custom-tooltip {
   position: absolute;
