--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1572,6 +1572,10 @@ Estilos Vacaciones
 .table th {
   text-align: center !important;
 }
+.tablaAlerta table td{
+  text-align: center !important;
+  border: solid gray 0.1em;
+}
 /* .custom-tooltip {
   position: absolute;
     z-index: 9999;
