--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1596,3 +1596,24 @@ Estilos Vacaciones
 .paginate_button{
   margin-right: 1em !important;
 }
+
+.overlay_muya{
+  display: none;
+  position: fixed; 
+  top: 0; 
+  left: 0; 
+  width: 100%; 
+  height: 100%; 
+  background-color: rgba(0, 0, 0, 0.5); 
+  z-index: 99999;
+}
+
+.fading-element {
+  width: 20%;
+  position: relative;
+  top: 45%;
+  bottom: 0;
+  right: 0;
+  left: 40%;
+  animation: fade 1s infinite;
+}
