--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,7 +1,8 @@
 body {
     font-family: "Karla", sans-serif;
     background-color: #F6F4EF;
-    min-height: 100vh; }
+    min-height: 100vh; 
+}
   
   .brand-wrapper {
     margin-bottom: 19px; }
@@ -12,17 +13,20 @@ body {
     border: 0;
     border-radius: 27.5px;
     box-shadow: 0 10px 30px 0 rgba(172, 168, 168, 0.43);
-    overflow: hidden; }
+    overflow: hidden; 
+  }
     .login-card-img {
       border-radius: 0;
       position: absolute;
       width: 100%;
       height: 100%;
       -o-object-fit: cover;
-         object-fit: cover; }
+         object-fit: cover; 
+      }
     .login-card .card-body {
-      padding: 85px 60px 60px; }
-      @media (max-width: 422px) {
+      padding: 85px 60px 60px; 
+    }
+    @media (max-width: 422px) {
         .login-card .card-body {
           padding: 35px 24px; } }
     .login-card-description {
