--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -291,6 +291,37 @@ input, input:before, input:after {
     }
 }
 
+.fading-element {
+    width: 10%;
+    position: relative;
+    top: 45%;
+    bottom: 0;
+    right: 0;
+    left: 45%;
+    animation: fade 1s infinite;
+  }
+
+@keyframes fade {
+    0%,
+    100% {
+    opacity: 0;
+    }
+  
+    50% {
+    opacity: 1;
+    }
+  }
+  
+  .overlay_muya_l{
+    display: none;
+    position: fixed; 
+    top: 0; 
+    left: 0; 
+    width: 100%; 
+    height: 100%; 
+    background-color: rgba(0, 0, 0, 0.5); 
+    z-index: 99999;
+  }
 /*# sourceMappingURL=login.css.map */
 
 
